--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
                         <input type="button" value="Знайти вченого, який прожив найдовше і вченого,
                         який прожив найменше" class="main__S-wraper-btn main__btn">
                     </div>
-                    <input type="button" value="Знайти вчених, в яких співпадають перші літери імені і прізвища" class="main__S-wraper-btn main__btn">
+                    <input type="button" value="Знайти вчених, в яких співпадають перші літери імені і 
+                    прізвища" class="main__S-wraper-btn main__btn">
                 </div>
             </section>
             <script src="./js/s(9).js"></script>
